# project-template

./: .gitignore  AGENTS.md  README.md
.agents/reports/: star-evaluations.json  star-evaluations.md
.agents/skills/: ATTRIBUTIONS.md
arr-appliance/: .env.example  README.md  docker-compose.yml
docs/: ROADMAP.template.md
mac-mini-firewall/: README.md  install-vault.command  make-usb.command  pyproject.toml
mac-mini-firewall/config/: firewall.example.yaml  netplan-vlan2-fallback.yaml  netplan.example.yaml
mac-mini-firewall/docs/: BACKUP-AND-ROLLBACK.md  NETWORK.md  README.md  SETUP-PLAN.md  TRIAGE.md  USB-SETUP.md
mac-mini-firewall/obsidian/: Home.md  README.md
mac-mini-firewall/obsidian/.obsidian/: app.json  graph.json
mac-mini-firewall/obsidian/Network/: Google Fiber and Deco XE75.md  Topology Overview.md
mac-mini-firewall/obsidian/Operations/: Backup and Rollback.md  Emergency Card.md  Triage - Internet Down.md
mac-mini-firewall/obsidian/Reference/: Config Files.md  IP Address Plan.md  MINIFWSETUP USB.md  Plug and Play Firewall.md  Preflight Checklist.md  minifw Commands.md
mac-mini-firewall/scripts/: build-setup-usb.sh  detect-interfaces.sh  install-usb-watcher.sh  install.sh  make-ubuntu-usb.sh  make-usb.sh  preflight.sh  rollback-to-network-box.sh  setup.sh  usb-autorun.sh
mac-mini-firewall/src/minifw/: __init__.py  __main__.py  cli.py  config.py  rules.py
mac-mini-firewall/tests/: test_rules.py
mac-mini-firewall/usb/: EMERGENCY-CARD.txt  START-HERE.txt
scripts/: new-project.sh  sync_ai_job_search_fork.py  sync_starred_skills.py
(+47 files in other folders)
